force-app/main/default/objects/Account/fields/Lev_e_de_fonds__c.field-meta.xml
<CustomField>
    <fullName>Lev_e_de_fonds__c</fullName>
    <label>Levée de fonds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>Pré-seed</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Serie A</fullName>
            </value>
            <value>
                <fullName>Serie B</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>