force-app/main/default/objects/Account/fields/LG_1__c.field-meta.xml
<CustomField>
    <fullName>LG_1__c</fullName>
    <inlineHelpText>Our graduates are aware/sensitive to a disrupted world</inlineHelpText>
    <label>LG 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LO1 : Graduates understand and analyze the economic and social news of a digi-global changing world</fullName>
            </value>
            <value>
                <fullName>LO2 : Graduates are able to identify and implement solutions to make decisions in an international business environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>