force-app/main/default/objects/Account/fields/LG_2__c.field-meta.xml
<CustomField>
    <fullName>LG_2__c</fullName>
    <inlineHelpText>Our graduates master business basics and disruptive business competencies</inlineHelpText>
    <label>LG 2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LO3 : Graduates understand and are able to implement the concepts, methods and tools for management, steering of projects and decision-making on a functional and interdisciplinary point of view</fullName>
            </value>
            <value>
                <fullName>LO4 : Graduates are able to use the tools and the professional digital systems to create economic value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>