force-app/main/default/objects/Account/fields/LG_3__c.field-meta.xml
<CustomField>
    <fullName>LG_3__c</fullName>
    <inlineHelpText>Our graduates develop a creative mindset and are able to make ideas happen</inlineHelpText>
    <label>LG 3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LO5 : Graduates are able to use the critical, creative and flexible thinking methods to analyse and solve complex problems in a changing and uncertain environment</fullName>
            </value>
            <value>
                <fullName>LO6 : Graduates are able to act/react and establish design process and innovating developments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>