force-app/main/default/objects/Account/fields/Libell_du_groupe__c.field-meta.xml
<CustomField>
    <fullName>Libell_du_groupe__c</fullName>
    <label>Libellé du groupe</label>
    <length>80</length>
    <type>Text</type>
</CustomField>