force-app/main/default/objects/Account/fields/Ligne_3__c.field-meta.xml
<CustomField>
    <fullName>Ligne_3__c</fullName>
    <label>Adresse courante: Ligne 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>