force-app/main/default/objects/Account/fields/Luxe_hospitality_high_brand__c.field-meta.xml
<CustomField>
    <fullName>Luxe_hospitality_high_brand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Luxe, hospitality, high brand</label>
    <type>Checkbox</type>
</CustomField>