force-app/main/default/objects/Account/fields/M_thode_de_saisie_des_Offres_sur_la_plat__c.field-meta.xml
<CustomField>
    <fullName>M_thode_de_saisie_des_Offres_sur_la_plat__c</fullName>
    <label>Méthode de saisie des Offres</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>manuel</fullName>
            </value>
            <value>
                <fullName>mutliposting</fullName>
            </value>
            <value>
                <fullName>iQuesta</fullName>
            </value>
            <value>
                <fullName>autre agrégateur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>