force-app/main/default/objects/Account/fields/Marketing_gestion_de_projet_marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing_gestion_de_projet_marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing, gestion de projet, marketing</label>
    <type>Checkbox</type>
</CustomField>