force-app/main/default/objects/Account/fields/N_TVA_intra_com__c.field-meta.xml
<CustomField>
    <fullName>N_TVA_intra_com__c</fullName>
    <inlineHelpText>Numéro TVA intra communautaire</inlineHelpText>
    <label>N° TVA intra com</label>
    <length>40</length>
    <type>Text</type>
</CustomField>