force-app/main/default/objects/Account/fields/Nature_d_activit_Forme_juridique__c.field-meta.xml
<CustomField>
    <fullName>Nature_d_activit_Forme_juridique__c</fullName>
    <label>Nature d’activité / Forme juridique</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Privée</fullName>
                <default>true</default>
                <label>Privée</label>
            </value>
            <value>
                <fullName>Fondation d’entreprise</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Publique</fullName>
            </value>
            <value>
                <fullName>Entreprise Familiale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>