force-app/main/default/objects/Account/fields/Nb_car_Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>Nb_car_Code_Postal__c</fullName>
    <description>Champ utilitaire Nb de caractères du code postal compte pour repérer les anomalies</description>
    <formula>LEN( Code_Postal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nb car Code Postal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>