force-app/main/default/objects/Account/fields/Nb_jours_depuis_Creation_Compte__c.field-meta.xml
<CustomField>
    <fullName>Nb_jours_depuis_Creation_Compte__c</fullName>
    <description>Resitue le nombre de jours écoulés depuis la création du compte. Utilisé pour les filtres dans les rapports.</description>
    <formula>Now() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nb jours depuis Création Compte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>