force-app/main/default/objects/Account/fields/Nb_jours_depuis_Modification_Compte__c.field-meta.xml
<CustomField>
    <fullName>Nb_jours_depuis_Modification_Compte__c</fullName>
    <description>Restituer le nb de jours qui s&apos;est écoulé depuis la date de dernière modification du compte</description>
    <formula>Now() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Restituer le nb de jours qui s&apos;est écoulé depuis la date de dernière modification du compte</inlineHelpText>
    <label>Nb jours depuis Modification Compte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>