force-app/main/default/objects/Account/fields/Nb_opportunit_s_actives__c.field-meta.xml
<CustomField>
    <fullName>Nb_opportunit_s_actives__c</fullName>
    <description>Nb d&apos;opps au statut non clos</description>
    <label>Nb opportunités actives</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Clos (Perdu)</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>