force-app/main/default/objects/Account/fields/Ne_pas_solliciter_pour_la_taxe__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_solliciter_pour_la_taxe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne pas solliciter pour la taxe</label>
    <type>Checkbox</type>
</CustomField>