force-app/main/default/objects/Account/fields/Niveau_de_partenariat_groupe__c.field-meta.xml
<CustomField>
    <fullName>Niveau_de_partenariat_groupe__c</fullName>
    <label>Niveau de partenariat groupe</label>
    <length>2</length>
    <type>Text</type>
</CustomField>