force-app/main/default/objects/Account/fields/Nom_commercial__c.field-meta.xml
<CustomField>
    <fullName>Nom_commercial__c</fullName>
    <label>Nom commercial</label>
    <length>254</length>
    <type>Text</type>
</CustomField>