force-app/main/default/objects/Account/fields/Nombre_de_contacts_dipl_m_s_groupe__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_contacts_dipl_m_s_groupe__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de contacts diplômés dans groupe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>