force-app/main/default/objects/Account/fields/Nombre_opportunites__c.field-meta.xml
<CustomField>
    <fullName>Nombre_opportunites__c</fullName>
    <label>Nombre opportunités du compte</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>