force-app/main/default/objects/Account/fields/Offre__c.field-meta.xml
<CustomField>
    <fullName>Offre__c</fullName>
    <label>Offre Employeurs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance Careers Day</fullName>
            </value>
            <value>
                <fullName>Luxury Careers Week</fullName>
            </value>
            <value>
                <fullName>Careers Forum</fullName>
            </value>
            <value>
                <fullName>Online Careers Days</fullName>
            </value>
            <value>
                <fullName>Corporate Discovery Session</fullName>
            </value>
            <value>
                <fullName>MBA Lounge</fullName>
            </value>
            <value>
                <fullName>Entrepreneurial Leadership Project</fullName>
            </value>
            <value>
                <fullName>Grand Idea</fullName>
            </value>
            <value>
                <fullName>In Company Project</fullName>
            </value>
            <value>
                <fullName>European Human Resources Management</fullName>
            </value>
            <value>
                <fullName>Expert Panel</fullName>
            </value>
            <value>
                <fullName>Conférence Carrière Etudiants</fullName>
            </value>
            <value>
                <fullName>Mock interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>