force-app/main/default/objects/Account/fields/Plan_de_conqu_te__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_conqu_te__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan de conquête</label>
    <type>Checkbox</type>
</CustomField>