force-app/main/default/objects/Account/fields/PMI_PME_VTE__c.field-meta.xml
<CustomField>
    <fullName>PMI_PME_VTE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMI/PME/VTE</label>
    <type>Checkbox</type>
</CustomField>