force-app/main/default/objects/Account/fields/Portefeuille_Employabilit_Th_orique__c.field-meta.xml
<CustomField>
    <fullName>Portefeuille_Employabilit_Th_orique__c</fullName>
    <formula>TEXT(CodeAPE__r.Portefeuille_Employabilit_Th_orique__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portefeuille Employabilité Théorique</label>
    <type>Text</type>
</CustomField>