force-app/main/default/objects/Account/fields/Programme_de_reconnaissance__c.field-meta.xml
<CustomField>
    <fullName>Programme_de_reconnaissance__c</fullName>
    <label>Programme de reconnaissance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recrutement &amp; marque employeur</fullName>
            </value>
            <value>
                <fullName>Pédagogie et formation</fullName>
            </value>
            <value>
                <fullName>Recherche &amp; développement</fullName>
            </value>
            <value>
                <fullName>Stratégie</fullName>
            </value>
            <value>
                <fullName>Sans flux financier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>