force-app/main/default/objects/Account/fields/Proportion_cadre2__c.field-meta.xml
<CustomField>
    <fullName>Proportion_cadre2__c</fullName>
    <formula>Effectif_Groupe__c / Effectif_Cadre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proportion cadre Groupe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>