force-app/main/default/objects/Account/fields/Proportion_cadre__c.field-meta.xml
<CustomField>
    <fullName>Proportion_cadre__c</fullName>
    <label>Proportion cadre Groupe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>