force-app/main/default/objects/Account/fields/Prospect_donateur__c.field-meta.xml
<CustomField>
    <fullName>Prospect_donateur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prospect donateur</label>
    <type>Checkbox</type>
</CustomField>