force-app/main/default/objects/Account/fields/Prospect_Sponsoring__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Sponsoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prospect Sponsoring</label>
    <type>Checkbox</type>
</CustomField>