force-app/main/default/objects/Account/fields/Quelles_sont_vos_attentes__c.field-meta.xml
<CustomField>
    <fullName>Quelles_sont_vos_attentes__c</fullName>
    <label>Quelles sont vos attentes?</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>