force-app/main/default/objects/Account/fields/R_gion__c.field-meta.xml
<CustomField>
    <fullName>R_gion__c</fullName>
    <formula>IF( Departement__c  &lt;&gt; Null,  Departement__r.R_gion__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse courante: Région</label>
    <type>Text</type>
</CustomField>