force-app/main/default/objects/Account/fields/Recu_ERP__c.field-meta.xml
<CustomField>
    <fullName>Recu_ERP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Champ qui sera rempli par le web service EMLYON pour définir les comptes tiers à envoyer vers à AGRESSO</description>
    <label>Recu ERP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>