force-app/main/default/objects/Account/fields/Remise_interentreprise__c.field-meta.xml
<CustomField>
    <fullName>Remise_interentreprise__c</fullName>
    <description>Le % de remise définit dans le contrat cadre en fonction du chiffre d’affraies de l’exercice précédent, réalisé avec EMLYON</description>
    <label>Remise interentreprise</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>