force-app/main/default/objects/Account/fields/RH__c.field-meta.xml
<CustomField>
    <fullName>RH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RH</label>
    <type>Checkbox</type>
</CustomField>