force-app/main/default/objects/Account/fields/RSE__c.field-meta.xml
<CustomField>
    <fullName>RSE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSE</label>
    <type>Checkbox</type>
</CustomField>