force-app/main/default/objects/Account/fields/Rue_2__c.field-meta.xml
<CustomField>
    <fullName>Rue_2__c</fullName>
    <label>Adresse courante: Ligne 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>