force-app/main/default/objects/Account/fields/Sales_biz_dev__c.field-meta.xml
<CustomField>
    <fullName>Sales_biz_dev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales &amp; biz dev</label>
    <type>Checkbox</type>
</CustomField>