force-app/main/default/objects/Account/fields/Scoring__c.field-meta.xml
<CustomField>
    <fullName>Scoring__c</fullName>
    <description>Il définit le niveau de partenariat</description>
    <label>Scoring</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPT-SCO10</fullName>
            </value>
            <value>
                <fullName>CPT-SCO20</fullName>
            </value>
            <value>
                <fullName>CPT-SCO30</fullName>
            </value>
            <value>
                <fullName>CPT-SCO40</fullName>
            </value>
            <value>
                <fullName>CPT-SCO50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>