force-app/main/default/objects/Account/fields/Secteur_d_activit__c.field-meta.xml
<CustomField>
    <fullName>Secteur_d_activit__c</fullName>
    <formula>IF( CodeAPE__c  &lt;&gt; &quot;&quot;,  CodeAPE__r.Secteur__c , null)</formula>
    <label>Secteur d&apos;activité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>