force-app/main/default/objects/Account/fields/Secteur_d_activit_proche__c.field-meta.xml
<CustomField>
    <fullName>Secteur_d_activit_proche__c</fullName>
    <formula>IF(  CodeNAFProche__c  &lt;&gt; &quot;&quot;,  CodeNAFProche__r.Secteur__c  , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secteur d&apos;activité proche</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>