force-app/main/default/objects/Account/fields/SIREN__c.field-meta.xml
<CustomField>
    <fullName>SIREN__c</fullName>
    <label>SIREN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>