force-app/main/default/objects/Account/fields/SIS_Academic_exchange__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academic exchange</label>
    <type>Checkbox</type>
</CustomField>