force-app/main/default/objects/Account/fields/SIS_Academic_exchange_period__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_exchange_period__c</fullName>
    <label>Academic exchange period</label>
    <type>TextArea</type>
</CustomField>