force-app/main/default/objects/Account/fields/SIS_Budget_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Budget_Unit_Code__c</fullName>
    <label>Budget Unit Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>