force-app/main/default/objects/Account/fields/SIS_Certifying_contract_number__c.field-meta.xml
<CustomField>
    <fullName>SIS_Certifying_contract_number__c</fullName>
    <label>Certifying contract number</label>
    <type>TextArea</type>
</CustomField>