force-app/main/default/objects/Account/fields/SIS_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>SIS_Eligibility__c</fullName>
    <label>Eligibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>SIS_Program_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parallel admission</fullName>
                <label>Parallel admission (Year 2 or 3)</label>
            </value>
            <value>
                <fullName>Dual degree</fullName>
            </value>
            <value>
                <fullName>VAE</fullName>
            </value>
            <value>
                <fullName>ASTF</fullName>
            </value>
            <value>
                <fullName>ASTF Institut de l&apos;engagement</fullName>
            </value>
            <value>
                <fullName>ASTI Join a school in France</fullName>
            </value>
            <value>
                <fullName>ASTI concours propre</fullName>
            </value>
            <value>
                <fullName>Double Diplôme avec reciprocité</fullName>
            </value>
            <value>
                <fullName>Double Diplôme sans reciprocité</fullName>
            </value>
            <value>
                <fullName>SESAME</fullName>
            </value>
            <value>
                <fullName>Concours international</fullName>
            </value>
            <value>
                <fullName>Admission parallèle (Année 2 ou année 3)</fullName>
            </value>
            <value>
                <fullName>Double Diplôme</fullName>
            </value>
            <value>
                <fullName>BCE Classe prépa Eco</fullName>
            </value>
            <value>
                <fullName>BCE Classe prépa Commercial</fullName>
            </value>
            <value>
                <fullName>BCE Classe prépa Littéraire</fullName>
            </value>
            <value>
                <fullName>BCE Classe prépa Admissible à l&apos;ENS</fullName>
            </value>
            <value>
                <fullName>BCE Classe prépa Paris Saclay</fullName>
            </value>
            <value>
                <fullName>BCE Classe prépa BCPST</fullName>
            </value>
            <value>
                <fullName>BCE Classe prépa MP</fullName>
            </value>
            <value>
                <fullName>BCE Classe prépa PC</fullName>
            </value>
            <value>
                <fullName>BCE Classe prépa PSI</fullName>
            </value>
            <value>
                <fullName>BCE Classe prépa PT</fullName>
            </value>
            <value>
                <fullName>Admission sur dossier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>