force-app/main/default/objects/Account/fields/SIS_Experience__c.field-meta.xml
<CustomField>
    <fullName>SIS_Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-experience</fullName>
            </value>
            <value>
                <fullName>Post-experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>