force-app/main/default/objects/Account/fields/SIS_HigherEducationInstitution__c.field-meta.xml
<CustomField>
    <fullName>SIS_HigherEducationInstitution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Higher Education Institution</label>
    <referenceTo>SIS_Higher_Education_Institution__c</referenceTo>
    <relationshipLabel>Associated</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>