force-app/main/default/objects/Account/fields/SIS_International_exchange_period__c.field-meta.xml
<CustomField>
    <fullName>SIS_International_exchange_period__c</fullName>
    <label>International exchange period</label>
    <type>TextArea</type>
</CustomField>