force-app/main/default/objects/Account/fields/SIS_Internship__c.field-meta.xml
<CustomField>
    <fullName>SIS_Internship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internship</label>
    <type>Checkbox</type>
</CustomField>