force-app/main/default/objects/Account/fields/SIS_Internship_period__c.field-meta.xml
<CustomField>
    <fullName>SIS_Internship_period__c</fullName>
    <label>Internship period</label>
    <type>TextArea</type>
</CustomField>