force-app/main/default/objects/Account/fields/SIS_Last_Reminder__c.field-meta.xml
<CustomField>
    <fullName>SIS_Last_Reminder__c</fullName>
    <label>Date de dernière relance</label>
    <type>DateTime</type>
</CustomField>