force-app/main/default/objects/Account/fields/SIS_Location__c.field-meta.xml
<CustomField>
    <fullName>SIS_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>hed__Facility__c</referenceTo>
    <relationshipLabel>Academic programs</relationshipLabel>
    <relationshipName>Academic_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>