force-app/main/default/objects/Account/fields/SIS_Next_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Next_Reminder_Date__c</fullName>
    <formula>IF (
SIS_Still_in_revision__c ,
 SIS_Last_Reminder__c + 
 CASE(  SIS_Reminders_Number__c ,
      1, 5,
      2, 5,
      1),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prochaine relance</label>
    <type>DateTime</type>
</CustomField>