force-app/main/default/objects/Account/fields/SIS_Nm_du_responsable_validation_Syllabi__c.field-meta.xml
<CustomField>
    <fullName>SIS_Nm_du_responsable_validation_Syllabi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du responsable validation Syllabi</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comptes2</relationshipName>
    <type>Lookup</type>
</CustomField>