force-app/main/default/objects/Account/fields/SIS_Number_of_credits_granted__c.field-meta.xml
<CustomField>
    <fullName>SIS_Number_of_credits_granted__c</fullName>
    <label>Number of credits granted</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>