force-app/main/default/objects/Account/fields/SIS_Official_name__c.field-meta.xml
<CustomField>
    <fullName>SIS_Official_name__c</fullName>
    <inlineHelpText>Affiché sur les diplômes et certifications</inlineHelpText>
    <label>Official name</label>
    <type>TextArea</type>
</CustomField>