force-app/main/default/objects/Account/fields/SIS_Program_Family__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_Family__c</fullName>
    <inlineHelpText>Anciennement Code CENTRE</inlineHelpText>
    <label>Program Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global BBA</fullName>
            </value>
            <value>
                <fullName>International MBA</fullName>
            </value>
            <value>
                <fullName>PGE</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Msc</fullName>
            </value>
            <value>
                <fullName>Executive MBA</fullName>
            </value>
            <value>
                <fullName>EMBABUPT</fullName>
            </value>
            <value>
                <fullName>MBA SISU</fullName>
            </value>
            <value>
                <fullName>EMMG</fullName>
            </value>
            <value>
                <fullName>Phd</fullName>
                <label>PhD</label>
            </value>
            <value>
                <fullName>DBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>