force-app/main/default/objects/Account/fields/SIS_Program_responsible__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>