force-app/main/default/objects/Account/fields/SIS_Program_Status__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_Status__c</fullName>
    <label>Statut programme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
                <default>true</default>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>Révision</fullName>
            </value>
            <value>
                <fullName>Soumis</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>