force-app/main/default/objects/Account/fields/SIS_Program_Validation_Submitted__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_Validation_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Soumis pour approbation</label>
    <type>Checkbox</type>
</CustomField>