force-app/main/default/objects/Account/fields/SIS_QAR_responsible__c.field-meta.xml
<CustomField>
    <fullName>SIS_QAR_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du responsable QAR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QAR_Responsible</relationshipName>
    <type>Lookup</type>
</CustomField>