force-app/main/default/objects/Account/fields/SIS_Reminders_Number__c.field-meta.xml
<CustomField>
    <fullName>SIS_Reminders_Number__c</fullName>
    <label>Nombre de relances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>