force-app/main/default/objects/Account/fields/SIS_Responsable_de_gamme__c.field-meta.xml
<CustomField>
    <fullName>SIS_Responsable_de_gamme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable de gamme</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comptes1</relationshipName>
    <type>Lookup</type>
</CustomField>