force-app/main/default/objects/Account/fields/SIS_Sender_data_flow__c.field-meta.xml
<CustomField>
    <fullName>SIS_Sender_data_flow__c</fullName>
    <label>Sender data flow</label>
    <type>TextArea</type>
</CustomField>