force-app/main/default/objects/Account/fields/SIS_SISE__c.field-meta.xml
<CustomField>
    <fullName>SIS_SISE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SISE</label>
    <type>Checkbox</type>
</CustomField>