force-app/main/default/objects/Account/fields/SIS_Still_in_revision__c.field-meta.xml
<CustomField>
    <fullName>SIS_Still_in_revision__c</fullName>
    <formula>AND (
ISPICKVAL ( SIS_Program_Status__c , &quot;Révision&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toujours en révision</label>
    <type>Checkbox</type>
</CustomField>