force-app/main/default/objects/Account/fields/SIS_subject_to_a_program_evaluation__c.field-meta.xml
<CustomField>
    <fullName>SIS_subject_to_a_program_evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>subject to a program evaluation</label>
    <type>Checkbox</type>
</CustomField>