force-app/main/default/objects/Account/fields/SIS_subject_to_an_insertion_survey__c.field-meta.xml
<CustomField>
    <fullName>SIS_subject_to_an_insertion_survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subject to an insertion survey</label>
    <type>Checkbox</type>
</CustomField>