force-app/main/default/objects/Account/fields/SIS_Training_Activity__c.field-meta.xml
<CustomField>
    <fullName>SIS_Training_Activity__c</fullName>
    <label>Training Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>