force-app/main/default/objects/Account/fields/SIS_Validated_by_QAR__c.field-meta.xml
<CustomField>
    <fullName>SIS_Validated_by_QAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation du QAR</label>
    <type>Checkbox</type>
</CustomField>