force-app/main/default/objects/Account/fields/SIS_Validated_by_responsible__c.field-meta.xml
<CustomField>
    <fullName>SIS_Validated_by_responsible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case cochée automatiquement quand le responsable de validation programme passe le premier niveau d&apos;approbation.</description>
    <label>Validation du responsable</label>
    <type>Checkbox</type>
</CustomField>