force-app/main/default/objects/Account/fields/SIS_Validation_Responsible__c.field-meta.xml
<CustomField>
    <fullName>SIS_Validation_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Doyen</inlineHelpText>
    <label>Nom du responsable validation programme</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Validation_Responsible</relationshipName>
    <type>Lookup</type>
</CustomField>