force-app/main/default/objects/Account/fields/SIS_Year_of_the_creation_1st_intake__c.field-meta.xml
<CustomField>
    <fullName>SIS_Year_of_the_creation_1st_intake__c</fullName>
    <label>Year of the creation (1st intake)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>